add_library(fe
	fe.C
	fe_abstract.C
	fe_base.C
	fe_bernstein.C
	fe_bernstein_shape_0D.C
	fe_bernstein_shape_1D.C
	fe_bernstein_shape_2D.C
	fe_bernstein_shape_3D.C
	fe_boundary.C
	fe_clough.C
	fe_clough_shape_0D.C
	fe_clough_shape_1D.C
	fe_clough_shape_2D.C
	fe_clough_shape_3D.C
	fe_compute_data.C
	fe_hermite.C
	fe_hermite_shape_0D.C
	fe_hermite_shape_1D.C
	fe_hermite_shape_2D.C
	fe_hermite_shape_3D.C
	fe_hierarchic.C
	fe_hierarchic_shape_0D.C
	fe_hierarchic_shape_1D.C
	fe_hierarchic_shape_2D.C
	fe_hierarchic_shape_3D.C
	fe_interface.C
	fe_interface_inf_fe.C
	fe_l2_hierarchic.C
	fe_l2_hierarchic_shape_0D.C
	fe_l2_hierarchic_shape_1D.C
	fe_l2_hierarchic_shape_2D.C
	fe_l2_hierarchic_shape_3D.C
	fe_l2_lagrange.C
	fe_l2_lagrange_shape_0D.C
	fe_l2_lagrange_shape_1D.C
	fe_l2_lagrange_shape_2D.C
	fe_l2_lagrange_shape_3D.C
	fe_lagrange.C
	fe_lagrange_shape_0D.C
	fe_lagrange_shape_1D.C
	fe_lagrange_shape_2D.C
	fe_lagrange_shape_3D.C
	fe_lagrange_vec.C
	fe_map.C
	fe_monomial.C
	fe_monomial_shape_0D.C
	fe_monomial_shape_1D.C
	fe_monomial_shape_2D.C
	fe_monomial_shape_3D.C
	fe_nedelec_one.C
	fe_nedelec_one_shape_2D.C
	fe_nedelec_one_shape_3D.C
	fe_scalar.C
	fe_scalar_shape_0D.C
	fe_scalar_shape_1D.C
	fe_scalar_shape_2D.C
	fe_scalar_shape_3D.C
	fe_subdivision_2D.C
	fe_szabab.C
	fe_szabab_shape_0D.C
	fe_szabab_shape_1D.C
	fe_szabab_shape_2D.C
	fe_szabab_shape_3D.C
	fe_transformation_base.C
	fe_type.C
	fe_xyz.C
	fe_xyz_boundary.C
	fe_xyz_map.C
	fe_xyz_shape_0D.C
	fe_xyz_shape_1D.C
	fe_xyz_shape_2D.C
	fe_xyz_shape_3D.C
	h1_fe_transformation.C
	hcurl_fe_transformation.C
	inf_fe.C
	inf_fe_base_radial.C
	inf_fe_boundary.C
	inf_fe_jacobi_20_00_eval.C
	inf_fe_jacobi_30_00_eval.C
	inf_fe_lagrange_eval.C
	inf_fe_legendre_eval.C
	inf_fe_map.C
	inf_fe_map_eval.C
	inf_fe_static.C
)
