add_library(geom
	cell.C
	cell_hex.C
	cell_hex20.C
	cell_hex27.C
	cell_hex8.C
	cell_inf.C
	cell_inf_hex.C
	cell_inf_hex16.C
	cell_inf_hex18.C
	cell_inf_hex8.C
	cell_inf_prism.C
	cell_inf_prism12.C
	cell_inf_prism6.C
	cell_prism.C
	cell_prism15.C
	cell_prism18.C
	cell_prism6.C
	cell_pyramid.C
	cell_pyramid13.C
	cell_pyramid14.C
	cell_pyramid5.C
	cell_tet.C
	cell_tet10.C
	cell_tet4.C
	edge.C
	edge_edge2.C
	edge_edge3.C
	edge_edge4.C
	edge_inf_edge2.C
	elem.C
	elem_cutter.C
	elem_quality.C
	elem_refinement.C
	face.C
	face_inf_quad.C
	face_inf_quad4.C
	face_inf_quad6.C
	face_quad.C
	face_quad4.C
	face_quad8.C
	face_quad9.C
	face_tri.C
	face_tri3.C
	face_tri3_subdivision.C
	face_tri6.C
	node.C
	node_elem.C
	plane.C
	point.C
	reference_elem.C
	reference_elem.data
	remote_elem.C
	sphere.C
	surface.C
)
