add_library(quadrature
	quadrature.C
	quadrature_build.C
	quadrature_clough.C
	quadrature_clough_1D.C
	quadrature_clough_2D.C
	quadrature_clough_3D.C
	quadrature_composite.C
	quadrature_conical.C
	quadrature_conical_2D.C
	quadrature_conical_3D.C
	quadrature_gauss.C
	quadrature_gauss_1D.C
	quadrature_gauss_2D.C
	quadrature_gauss_3D.C
	quadrature_gauss_lobatto.C
	quadrature_gauss_lobatto_1D.C
	quadrature_gauss_lobatto_2D.C
	quadrature_gauss_lobatto_3D.C
	quadrature_gm.C
	quadrature_gm_2D.C
	quadrature_gm_3D.C
	quadrature_grid.C
	quadrature_grid_1D.C
	quadrature_grid_2D.C
	quadrature_grid_3D.C
	quadrature_jacobi.C
	quadrature_jacobi_1D.C
	quadrature_monomial.C
	quadrature_monomial_1D.C
	quadrature_monomial_2D.C
	quadrature_monomial_3D.C
	quadrature_simpson.C
	quadrature_simpson_1D.C
	quadrature_simpson_2D.C
	quadrature_simpson_3D.C
	quadrature_trap.C
	quadrature_trap_1D.C
	quadrature_trap_2D.C
	quadrature_trap_3D.C
)
